# whitewater

./: Cargo.toml  Dockerfile  README.md  Tiltfile  WARP.md  deploy.yaml  full_run.sh  ingress-controller.yaml  ingress-nginx.yaml  kind-cluster.yaml  kind-config.yaml  nodeport-svc.yaml  reset_kind.sh  setup-kind.sh  test_run.sh
docs/: 00-prerequisites-setup.md  06-docker.md  07-kubernetes-concepts.md  kubernetes-cluster-setup.md
src/: app_state.rs  handler.rs  log.rs  main.rs  server_state.rs  user.rs
src/app_state/: log.rs  raft_state.rs  shared.rs  state_machine.rs
src/app_state/state_machine/: user.rs
src/websocket/: client.rs  connection.rs  mod.rs  server.rs  shared.rs
